<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.kevin.loopview.AdLoopView
        android:id="@+id/main_act_adloopview"
        android:layout_width="match_parent"
        android:layout_height="170dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D7F6F3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_apply"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/add_car"
                style="@style/home_style">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/owner" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_car" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/defy_query"
                style="@style/home_style">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/owner" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/query" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/stop_history"
                style="@style/home_style">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/owner" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_car" />

            </LinearLayout>

            <LinearLayout android:id="@+id/qr" style="@style/home_style">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/owner" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qr" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_apply"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="2017年02月09日"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="星期四"
                    android:textSize="25sp" />
                <!-- <TextView
                     android:layout_marginLeft="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="今日限行 : 2 | 7"
                     android:textSize="20sp"/>-->

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/green_color" />

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp">

            </ListView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
