<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aa"
    tools:context=".login.LoginActivity"
  >

    <ImageView
        android:id="@+id/login_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@mipmap/ic_launcher"
       android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/dd_dimen_121px"
            android:background="@drawable/bg_apply">

            <ImageView
                android:id="@+id/iv_mable"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:background="@drawable/phone"
                android:gravity="center_vertical" />

            <EditText
                android:id="@+id/et_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_mable"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:inputType="number"
                android:maxLength="11"
                android:hint="@string/phone"
                android:paddingLeft="5dp"
                android:singleLine="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_apply">

            <ImageView
                android:id="@+id/iv_pass"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:background="@drawable/code" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:layout_toRightOf="@+id/iv_pass"
                android:maxLength="6"
                android:hint="@string/code"
                android:digits="._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ"
                android:paddingLeft="5dp"
                android:singleLine="true" />
            <Button
                android:id="@+id/get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/get_code"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@color/login_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="点击登录"
                android:textSize="25sp"
                android:textColor="@color/title_bar"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
